--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ textarea {
    ========================================================================== */
 /* Structural Styles */
 html {
-    background-color: rgb(69, 69, 69);
+    background-color: rgb(122, 120, 120);
 }
 
 /* Body Header Styles */
@@ -114,11 +114,11 @@ body {}
 
 /* Navigation Styles */
 nav {
-    background-color: rgb(90, 90, 90);
+    background-color: rgb(255, 255, 255);
 }
 
 nav li {
-    background-color: rgb(130, 130, 130);
+    background-color: rgb(90, 90, 90);
     display: block;
     float: left;
     margin-left: 0px;
@@ -127,10 +127,9 @@ nav li {
 }
 
 nav a:hover,
-nav a:active {}
-
-nav a:link,
-nav a:visited {}
+nav a:active {
+    color: rgb(201, 34, 34);
+}
 
 /* Section Styles */
 section {}
@@ -139,7 +138,9 @@ section {}
 article {}
 
 /* Aside Styles */
-aside {}
+aside {
+    float: right;
+}
 
 /* Footer Styles */
 footer {}
