--- a/main.css
+++ b/main.css
@@ -96,62 +96,102 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/* Structural Styles */
-html {
-    background-color: rgb(122, 120, 120);
-}
 
 /* Body Header Styles */
-body header {}
+
+@font-face {}
+
+
+body header {
+    position: relative;
+}
 
 header h1 {
     text-align: center;
-    color: rgb(214, 214, 214)
+    color: rgb(0, 0, 0);
+    padding-top: 150px;
+    padding-bottom: 155px;
+    font-size: 10em;
+}
+
+box-sizing {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
 /* Body Styles */
-body {}
+body {
+    background-color: rgb(255, 254, 254);
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /* Navigation Styles */
-nav {
-    background-color: rgb(255, 255, 255);
+.Mainmenu {
+    overflow: hidden;
+    background-color: rgb(143, 143, 143);
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
-
-nav li {
-    background-color: rgb(90, 90, 90);
+.Mainmenu a {
     display: block;
     float: left;
-    margin-left: 0px;
-    margin-right: 0px;
-    padding: 10px 113px;
+    padding: 14px 16px;
+    text-align: center;
+    text-decoration: none;
 }
 
-nav a:hover,
-nav a:active {
-    color: rgb(201, 34, 34);
+.main {
+    margin-top: 40px;
 }
 
-/* Section Styles */
-section {}
-
-/* Article Styles */
-article {}
-
-/* Aside Styles */
-aside {
+body>header>div.Mainmenu a:link,
+body>header>div.Mainmenu a:visited {
+    text-decoration-style: none;
+    font-size: 2em;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    padding-left: 20px;
+    padding-right: 20px;
     float: right;
 }
 
+body>header>div.Mainmenu a:hover,
+body>header>div.Mianmenu a:active {
+    background-color: rgb(20, 20, 20);
+}
+
+/* Section Styles */
+section {
+    text-align: center;
+    text-decoration-line: underline;
+}
+
+section>article>h1 {
+    font-style: italic;
+}
+/* Article Styles */
+article p {
+
+}
+
 /* Footer Styles */
-footer {}
+footer {
+    background-color: rgb(46, 46, 46);
+    color: white;
+    text-align: center;
+    padding: 40px 0 110px 0;
+    /* list-style-type: none; */
+}
+footer nav {
+    float: left;
+}
 
-
-
-
-
-
-
-
+footer nav li {
+    list-style-type: none;
+}
 
 /* ==========================================================================
    Helper classes
