--- a/main.css
+++ b/main.css
@@ -97,13 +97,26 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/* Body Header Styles */
+/* Structural Styles */
 
 @font-face {}
 
+body {
+    background-color: rgb(255, 255, 255);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+box-sizing {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+/* Body Header Styles */
 
 body header {
-    position: relative;
+    font-size: 10px;
 }
 
 header h1 {
@@ -114,23 +127,10 @@ header h1 {
     font-size: 10em;
 }
 
-box-sizing {
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-}
-
-/* Body Styles */
-body {
-    background-color: rgb(255, 254, 254);
-    margin-left: auto;
-    margin-right: auto;
-}
-
 /* Navigation Styles */
 .Mainmenu {
     overflow: hidden;
-    background-color: rgb(143, 143, 143);
+    background-color: rgb(231, 231, 231);
     position: fixed;
     top: 0;
     width: 100%;
@@ -161,6 +161,7 @@ body>header>div.Mainmenu a:visited {
 body>header>div.Mainmenu a:hover,
 body>header>div.Mianmenu a:active {
     background-color: rgb(20, 20, 20);
+    color: white;
 }
 
 /* Section Styles */
@@ -178,12 +179,12 @@ article p {
 }
 
 /* Footer Styles */
-footer {
+footer.foot {
     background-color: rgb(46, 46, 46);
     color: white;
     text-align: center;
     padding: 40px 0 110px 0;
-    /* list-style-type: none; */
+    font-size: 18px;
 }
 footer nav {
     float: left;
@@ -192,6 +193,13 @@ footer nav {
 footer nav li {
     list-style-type: none;
 }
+
+footer:after {
+    display: table;
+    content: "";
+    clear: both;
+}
+
 
 /* ==========================================================================
    Helper classes
