--- a/grids.css
+++ b/grids.css
@@ -1,26 +1,9 @@
 @charset "utf-8";
 
+
+
+/* This section of CSS Styles might be utilized at a later date */
+
+
+
 /* Grid Rows and Columns Styles */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
