--- a/main.css
+++ b/main.css
@@ -107,7 +107,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     background-position: center;
-    font-family: 'Shadows Into Light', cursive; 
+    font-family: 'Shadows Into Light', cursive;
 }
 
 box-sizing {
@@ -130,7 +130,7 @@ header.Mainheader h1 {
     margin-bottom: 175px;
     font-size: 6em;
     color: white;
-    font-family: 'Kumar One Outline', cursive; 
+    font-family: 'Kumar One Outline', cursive;
 }
 
 /* Navigation Styles */
@@ -147,7 +147,7 @@ header.Mainheader h1 {
     float: left;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: 'Kumar One Outline', cursive; 
+    font-family: 'Kumar One Outline', cursive;
 }
 
 .main {
@@ -187,11 +187,12 @@ article {
     bottom: 0;
     width: 100%;
 }
+
 footer {
     color: white;
     text-align: center;
     font-size: 18px;
-    font-family: 'Permanent Marker', cursive; 
+    font-family: 'Permanent Marker', cursive;
 }
 
 footer nav {
@@ -213,7 +214,11 @@ footer:after {
     Mobile Styles: 0px to 480px
    ======================================
 */
-@media only screen and (min-width: 480px) {}
+@media only screen and (max-width: 480px) {
+    header h1 {
+        font-size: 2px;
+    }
+}
 
 /* ======================================
     Tablet Styles: 481px to greater
