--- a/main.css
+++ b/main.css
@@ -182,6 +182,7 @@ article {
 /* Footer Styles */
 
 .foot {
+    background-color: rgb(36, 36, 36);
     overflow: hidden;
     position: fixed;
     bottom: 0;
