Conflicts between merges resolved and all up to date
Added multiple styles to the look of the website when they are in mobile form

--- a/main.css
+++ b/main.css
@@ -142,7 +142,7 @@ header.Mainheader h1 {
     width: 100%;
 }
 
-.Mainmenu a {
+.Mainmenu ul li {
     display: block;
     float: left;
     padding: 14px 16px;
