--- a/main.css
+++ b/main.css
@@ -133,15 +133,6 @@ header h1 {
     font-family: 'Kumar One Outline', cursive;
 }
 
-article.mainpage h1 {
-    text-align: center;
-    color: rgb(255, 253, 253);
-    margin-top: 200px;
-    margin-bottom: 200px;
-    font-size: 5em;
-    font-family: 'Kumar One Outline', cursive;
-}
-
 /* Navigation Styles */
 .Mainmenu {
     background-color: rgb(20, 20, 20);
@@ -169,8 +160,8 @@ body>header>nav.Mainmenu a:visited {
     font-size: 2em;
     color: rgb(255, 255, 255);
     text-decoration: none;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 body>header>nav.Mainmenu a:hover,
@@ -191,8 +182,20 @@ article.main ul li {
     padding-left: 35px;
 }
 
-aside a#foxyform_embed_link_939910 script {
-    margin-left: 200px;
+article.mainpage h1 {
+    text-align: center;
+    color: rgb(255, 253, 253);
+    margin-top: 200px;
+    margin-bottom: 200px;
+    font-size: 5em;
+    font-family: 'Kumar One Outline', cursive;
+}
+
+article.mainpage img {
+    margin-left: 525px;
+    margin-bottom: 150px;
+    border: 15px solid rgb(20, 20, 20);
+    box-shadow: rgb(0, 0, 0) 15px 15px 15px 15px;
 }
 
 section {
@@ -241,7 +244,7 @@ section>article:last-of-type {
 
 /* Aside Styles */
 
-aside {
+aside a {
     margin-left: 250px;
 }
 
@@ -298,6 +301,10 @@ footer:after {
         order: 2;
     }
 
+    article.mainpage img {
+        display: none;
+    }
+
     article.main {
         width: 100%;
     }
@@ -308,10 +315,25 @@ footer:after {
         background-color: rgb(36, 36, 36);
     }
 
-    aside {
-        margin-right: 600px;
+    aside a#foxyform_embed_link_939910 script {
+        margin-left: 200px;
     }
 
+    aside p {
+        background-color: rgb(108, 123, 146); 
+        text-align: center;
+        font-size: 1.5em;
+        border: 5px double rgb(0, 0, 0);
+    }
+
+    section article p {
+        background-color: rgb(108, 123, 146);
+        text-align: center;
+        font-size: 1.5em;
+        border: 5px double rgb(0, 0, 0);
+        padding: 50px;
+    }
+    
 
 }
 
@@ -319,13 +341,64 @@ footer:after {
     Tablet Styles: 481px to greater
    ======================================
 */
-@media only screen and (min-width: 481px) {}
+@media only screen and (min-width: 481px) {
+    nav ul li {
+        float: left;
+        display: block;
+        text-align: center;
+    }
+
+    article.mainpage h1 {
+        margin-top: 250px;
+        width: 100%;
+        font-size: 4em;
+    }
+
+    article.mainpage img {
+        display: none;
+    }
+
+    section>h1 {
+        margin-top: 220px;
+        padding: 10px;
+        font-size: 2.5em;
+        background-color: rgb(36, 36, 36);
+    }
+
+    aside a {
+        margin-left: 200px;
+    }
+
+    aside p {
+        background-color: rgb(108, 123, 146); 
+        text-align: center;
+        font-size: 1.5em;
+        border: 5px double rgb(0, 0, 0);
+    }
+
+    section article p {
+        background-color: rgb(108, 123, 146);
+        text-align: center;
+        font-size: 1.5em;
+        border: 5px double rgb(0, 0, 0);
+        padding: 50px;
+    }
+}
 
 /* ======================================
     Desktop Styles: 768px to greater
    ======================================
 */
-@media only screen and (min-width: 769px) {}
+@media only screen and (min-width: 769px) {
+    aside a {
+        margin-left: 300px;
+    }
+
+    article.mainpage img {
+        display: block;
+    }
+
+}
 
 
 
